M       cat_run.m
M       cat_run_job.m
MM      cat_run_job_APP_SPM.m
M       cat_run_job_APP_init.m
MM      cat_spm_preproc_run.m
MM      cat_spm_smoothto8bit.m
M       html/images/cat_tst_seg_bwp_ana.png
M       tbx_cfg_cat.m

(1) Changed:   Large changes in cat_run_job to simplify APP cases 
                * APP=0 - do nothing 
                * APP=1 - use SPM bias correction
                * APP=2 - use SPM + APPs bias correction
                * APP=3 - APP init (old APP1)
                * APP=4 - APP final 
               and to improve behaviour in case of skull-stripped data:
                * Added TPM update that combine head and background classes to
                  one background class in cat_run_job.                 
                * Added noise to the background to guarantee SPM requirements 
                  of gaussian distributed data in cat_run_job.
                * Added 
(2) Changed:   Update GUI changing the *str parameters from real data input to
               fix cases.

------------------------------------------------------------------------
r1139 | gaser | 2017-06-12 21:54:51 +0200 (Mo, 12 Jun 2017) | 9 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_extopts.m
M       cat_conf_opts.m
M       cat_io_cgw2seg.m
M       cat_main.m

Fixed: Typos...

------------------------------------------------------------------------

Changed paths:
M       CHANGES.txt
M       cat_surf_resamp.m
M       templates_surfaces/lc.central.Template_T1_IXI555_MNI152.gii
M       templates_surfaces/lc.central.freesurfer.gii
M       templates_surfaces/lc.sphere.freesurfer.gii
M       templates_surfaces/rc.central.Template_T1_IXI555_MNI152.gii
M       templates_surfaces/rc.central.freesurfer.gii
M       templates_surfaces/rc.sphere.freesurfer.gii

Changed: Temporarily written files during resampling & Smoothing now have
unique names.
------------------------------------------------------------------------
r1140 | gaser | 2017-06-13 11:20:57